[tool.poetry]
name = "rhubarb"
version = "0.1.0"
description = ""
authors = ["Kyle Hanson <me@khanson.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
strawberry-graphql = "^0.174.0"
psycopg = "^3.1.8"
pytest-asyncio = "^0.21.0"
asgiref = "^3.6.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
